<resources>
    <string name="app_name">AttendanceApp</string>
    <string name="tvPrompt">Введите логин и пароль учетной записи КФУ</string>
    <string name="etLoginHint">Логин</string>
    <string name="etPasswordHint">Пароль</string>
    <string name="btnLogin">Войти</string>
    <string name="etNameHint">Название курса</string>
    <string name="radio_course">Весь поток</string>
    <string name="radio_groups">Некоторые группы</string>
    <string name="radio_students">Некоторые студенты</string>
    <string name="btnAddCourse">Добавить</string>
    <string name="btnCheckIn">Отметиться</string>
    <string name="tv_name">Название</string>
    <string name="tv_teacher">Преподаватель:</string>
    <string name="tv_type">Ограничения:</string>
    <string name="btnStartAttendance">Отметить студентов</string>
    <string name="btnDelete">Удалить</string>
    <string name="btnAdd">Добавить курс</string>
    <string name="tvSubj">Предмет:</string>
    <string name="tvDate">Дата:</string>
    <string name="checkboxs1">Студент 1</string>
    <string name="btnClose">Закрыть</string>
    <string name="tv_hint1">1. Выберите режим отображения:</string>
    <string name="radio_subj">Предмет</string>
    <string name="radio_date">Дата</string>
    <string name="tv_hint3">2. Выберите дату:</string>
    <string name="tv_hint2">2. Выберите предмет:</string>
    <string name="btnShow">Показать</string>
    <string name="hint1">1. Выберите предмет:</string>
    <string name="hint2">2. Выберите режим отображения:</string>
    <string name="radio_all">Все</string>
    <string name="radio_group">Группа</string>
    <string name="radio_student">Студент</string>
    <string name="hint4">Выберите данные:</string>
    <string name="hint3">Выберите дату:</string>
    <string name="btnShow">Показать</string>
    <string name="wait">Подождите</string>
    <string name="tv">TextView</string>
    <string name="tv">TextView</string>
</resources>
